# tldreadme

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  LICENSE  README.md  SETUP.md  TLDREADME.md  TLDRNOTES.md  TLDReadme.md  USAGE.md  create_demo.sh  docker-compose.lite.yml  docker-compose.llm.yml  docker-compose.yml  litellm-config.yaml  pyproject.toml  setup.cfg  setup.py
.claude/: TLDR.md  TLDR_CONTEXT.md
.github/workflows/: ci.yml
.serena/: project.yml
.tldr/work/plans/: local-audit-pipeline-20260323.yaml
tests/: bedrock.py  conftest.py  test_audit.py  test_bedrock_contract.py  test_children.py  test_cli.py  test_coding_tools.py  test_embedder.py  test_generator.py  test_hot_index.py  test_lazy.py  test_lsp.py  test_mcp_server.py  test_parser.py  test_rag_planning.py  test_roadmap.py  test_runtime.py  test_search.py  test_summary.py  test_workboard.py
tldreadme/: __init__.py  __main__.py  _shared.py  asts.py  audit.py  chains.py  children.py  cli.py  coding_tools.py  context_docs.py  deps.py  embedder.py  generator.py  grapher.py  hot_index.py  lazy.py  lsp.py  mcp_server.py  parser.py  pipeline.py  rag.py  roadmap.py  runtime.py  search.py  summary.py  watcher.py  workboard.py
tools/: search-gateway.py
