[project]
name = "tldreadme"
version = "0.1.0"
description = "TL;DR for any codebase. Tree-sitter AST + Qdrant vectors + FalkorDB graphs + RAG. MCP server that makes LLMs KNOW your code."
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-languages>=1.10",
    "litellm>=1.40",
    "qdrant-client>=1.9",
    "falkordb>=1.0",
    "redis>=5.0",
    "watchdog>=4.0",
    "mcp>=1.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
]

[project.scripts]
tldreadme = "tldreadme.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
