[metadata]
name = tldreadme
version = 0.1.2
author = Matt Klein
author_email = mk@ntele.net
description = TL;DR for any codebase. Makes LLMs KNOW your code.

[options]
packages = find:
python_requires = >=3.11
install_requires =
    tree-sitter>=0.21,<0.22
    tree-sitter-languages>=1.10,<1.11
    litellm>=1.40
    qdrant-client>=1.9
    falkordb>=1.0
    redis>=5.0
    watchdog>=4.0
    mcp>=1.0
    click>=8.1
    rich>=13.0
    pydantic>=2.0
    httpx>=0.27
    tiktoken>=0.7

[options.entry_points]
console_scripts =
    tldr = tldreadme.cli:main
